Minor refactoring. Adjusted spacing, added comments.